<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.chapter.tutorial.TutorialActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tutorial_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:clickable="false" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="false"
        android:contentDescription="@string/fab_description"
        app:srcCompat="@drawable/ic_action_play_chapter" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_cl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="48sp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/tutorial_uparrow_desc"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toStartOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:srcCompat="@drawable/ic_tutorial_up" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:layout_weight="1"
            android:contentDescription="@string/tutorial_vocabarrow_desc"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/textView4"
            app:srcCompat="@drawable/ic_tutorial_right" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/tutorial_header"
            android:textColor="@android:color/primary_text_light"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/tutorial_vocab"
            android:textColor="@android:color/primary_text_light"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/tutorial_definition"
            android:textColor="@android:color/primary_text_light"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/tutorial_conversation"
            android:textColor="@android:color/primary_text_light"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto_slab"
            android:text="@string/tutorial_quiz"
            android:textColor="@android:color/primary_text_light"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/tutorial_listen_button"
            android:textColor="@android:color/primary_text_light"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <Button
            android:id="@+id/startLearningButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="20dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/tutorial_button"
            android:textSize="24sp"
            app:elevation="30dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tutorial_quiz_pass_lbl" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="32dp"
            android:layout_height="56dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:contentDescription="@string/tutorial_rightarrow_desc"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_tutorial_right" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_weight="1"
            android:contentDescription="@string/tutorial_convarrow_desc"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/textView17"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/textView17"
            app:srcCompat="@drawable/ic_tutorial_left" />

        <TextView
            android:id="@+id/tutorial_quiz_pass_lbl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/tutorial_quiz_pass"
            android:textColor="@android:color/primary_text_light"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline4"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:srcCompat="@drawable/stub_box"
            android:contentDescription="@string/placeholder_content_description" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="50dp"
            android:layout_height="10dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/stub_box"
            android:contentDescription="@string/placeholder_content_description" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/tutorial_conversation_hear"
            android:textColor="@android:color/primary_text_light"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView17"
            app:layout_constraintEnd_toStartOf="@+id/imageView7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView17"
            app:srcCompat="@drawable/rv_chapter_conv_me_bkg"
            android:contentDescription="@string/placeholder_content_description" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="0dp"
            android:layout_height="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintVertical_bias="0"
            app:srcCompat="@drawable/stub_convme"
            android:contentDescription="@string/placeholder_content_description" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="0dp"
            android:layout_height="12dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintEnd_toEndOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6"
            app:layout_constraintVertical_bias="1"
            app:srcCompat="@drawable/stub_convme"
            android:contentDescription="@string/placeholder_content_description" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>